--- a/app/views/policies/show.html.erb
+++ b/app/views/policies/show.html.erb
@@ -26,7 +26,7 @@
   <div class="col-md-10"><%= @policy.zone_id %></div>
   <div class="col-md-12"><br/></div>
   <div class="col-md-12">
-    <%= link_to_if @policy.update?, 'Edit', edit_policy_path(@policy) %>
+      Edit
     <span> | </span>
     <%= link_to 'Back', policies_path %>
   </div>
