update CSB for Safari bug fix; add Charleston blog post; remove default site search from default brand bar

--- a/app/views/shared/_brand_bar.html.erb
+++ b/app/views/shared/_brand_bar.html.erb
@@ -11,9 +11,9 @@
     </div>
 
     <!-- search -->
-    <% if show_site_search? %>
-        <%= render 'shared/site_search' %>
-    <% end %>
+     <%# if show_site_search? %>
+        <%#= render 'shared/site_search' %>
+    <%# end %>
 
     <div class="collapse navbar-collapse" id="brand-bar-nav">
       <div class="navbar-right">
