Resolves HELIO-2304: Upgrade Checkpoint to Master and Refactor

--- a/app/views/fulcrum/_component.html.erb
+++ b/app/views/fulcrum/_component.html.erb
@@ -28,7 +28,7 @@
 <div class="col-md-12">
   <%= render partial: '/components/products', locals: { component: component, products: component.products } %>
 </div>
-<h2>Policies</h2>
+<h2>Grants</h2>
 <div class="col-md-12">
-  <%= render partial: '/policies/policies', locals: { resource: component, policies: component.policies } %>
+  <%= render partial: '/grants/grants', locals: { resource: component, grants: component.grants } %>
 </div>
