--- a/app/views/fulcrum/_institution.html.erb
+++ b/app/views/fulcrum/_institution.html.erb
@@ -28,7 +28,7 @@
     </tr>
   </table>
 </div>
-<h2>Policies</h2>
+<h2>Grants</h2>
 <div class="col-md-12">
-  <%= render partial: '/policies/policies', locals: { agent: institution, policies: institution.policies } %>
+  <%= render partial: '/grants/grants', locals: { agent: institution, grants: institution.grants } %>
 </div>
