--- a/app/views/fulcrum/_sidebar.html.erb
+++ b/app/views/fulcrum/_sidebar.html.erb
@@ -8,7 +8,7 @@
   <li <%= "class=active" if partials.to_s == :users.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :users) %>"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Users</a></li>
   <li <%= "class=active" if partials.to_s == :tokens.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :tokens) %>"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Tokens</a></li>
   <li <%= "class=active" if partials.to_s == :logs.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :logs) %>"><span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> Logs</a></li>
-  <li <%= "class=active" if partials.to_s == :policies.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :policies) %>"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Policies</a></li>
+  <li <%= "class=active" if partials.to_s == :grants.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :grants) %>"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grants</a></li>
   <li <%= "class=active" if partials.to_s == :books.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :monographs) %>"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Monographs</a></li>
   <li <%= "class=active" if partials.to_s == :items.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :assets) %>"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Assets</a></li>
   <li <%= "class=active" if partials.to_s == :pages.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :pages) %>"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Pages</a></li>
