--- a/app/views/grants/new.html.erb
+++ b/app/views/grants/new.html.erb
@@ -1,9 +1,9 @@
 <div id="maincontent">
-  <h1>New Policy</h1>
+  <h1>New Grant</h1>
   <div class="col-md-12">
-    <%= render 'form', policy: @policy %>
+    <%= render 'form', grant: @grant %>
   </div>
   <div class="col-md-12"><br/></div>
-  <div class="col-md-12"><%= link_to 'Back', policies_path %></div>
+  <div class="col-md-12"><%= link_to 'Back', grants_path %></div>
   <div class="col-md-12"><br/></div>
 </div>
