--- a/app/views/individuals/show.html.erb
+++ b/app/views/individuals/show.html.erb
@@ -12,9 +12,9 @@
   <div class="col-md-1"><%= link_to @individual.lessee.id, lessee_path(@individual.lessee) %></div>
   <div class="col-md-11"><%= @individual.lessee.identifier %></div>
   <div class="col-md-12"><br/></div>
-  <h2>Policies</h2>
+  <h2>Grants</h2>
   <div class="col-md-12">
-    <%= render partial: '/policies/policies', locals: { agent: @individual, policies: @individual.policies } %>
+    <%= render partial: '/grants/grants', locals: { agent: @individual, grants: @individual.grants } %>
   </div>
   <div class="col-md-12"><br/></div>
   <div class="col-md-12">
