--- a/app/views/components/show.html.erb
+++ b/app/views/components/show.html.erb
@@ -27,9 +27,9 @@
     <%= render partial: 'lessees', locals: { component: @component, lessees: @component.lessees } %>
   </div>
   <div class="col-md-12"><br/></div>
-  <h2>Policies</h2>
+  <h2>Grants</h2>
   <div class="col-md-12">
-    <%= render partial: '/policies/policies', locals: { resource: @component, policies: @component.policies } %>
+    <%= render partial: '/grants/grants', locals: { resource: @component, grants: @component.grants } %>
   </div>
   <div class="col-md-12"><br/></div>
   <div class="col-md-12">
