--- a/app/views/fulcrum/_individual.html.erb
+++ b/app/views/fulcrum/_individual.html.erb
@@ -20,7 +20,7 @@
     </tr>
   </table>
 </div>
-<h2>Policies</h2>
+<h2>Grants</h2>
 <div class="col-md-12">
-  <%= render partial: '/policies/policies', locals: { agent: individual, policies: individual.policies } %>
+  <%= render partial: '/grants/grants', locals: { agent: individual, grants: individual.grants } %>
 </div>
