--- a/app/views/fulcrum/_institutions.html.erb
+++ b/app/views/fulcrum/_institutions.html.erb
@@ -13,7 +13,7 @@
       <th><label for="identifier_like">Identifier</label></th>
       <th><label for="name_like">Name</label></th>
       <th><label for="entity_id_like">Entity ID</label></th>
-      <th>Policies</th>
+      <th>Grants</th>
     </tr>
     <tr>
       <td><button name="submit" type="submit" value="filter">Filter</button></td>
@@ -31,7 +31,7 @@
         <td><%= institution.identifier %></td>
         <td><%= institution.name %></td>
         <td><%= link_to institution.entity_id, institution.entity_id %></td>
-        <td><%= institution.policies.count() %></td>
+        <td><%= institution.grants.count() %></td>
       </tr>
     <% end %>
   </table>
