--- a/app/views/fulcrum/_product.html.erb
+++ b/app/views/fulcrum/_product.html.erb
@@ -24,7 +24,7 @@
 <div class="col-md-12">
   <%= render partial: '/products/components', locals: { product: product, components: product.components } %>
 </div>
-<h2>Policies</h2>
+<h2>Grants</h2>
 <div class="col-md-12">
-  <%= render partial: '/policies/policies', locals: { resource: product, policies: product.policies } %>
+  <%= render partial: '/grants/grants', locals: { resource: product, grants: product.grants } %>
 </div>
