HELIO-2224 Cache graph points for stats graphs

--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -12,7 +12,7 @@
       <p><%= @monograph_presenter.permission_badge %>
       <%= @monograph_presenter.workflow.badge %></p>
     <% end %>
-    <%= render 'shared/altmetric_dimensions' %> 
+    <%= render 'shared/altmetric_dimensions' %>
     <% if @monograph_presenter.peer_review? %>
       <div><%= @monograph_presenter.peer_review.file.content.force_encoding("UTF-8").html_safe %></div>
     <% end %>
@@ -100,10 +100,7 @@
       <% if @monograph_presenter.aboutware? %>
         <li role="presentation"><a id="tab-aboutware" href="#aboutware" role="tab" data-toggle="tab" aria-controls="aboutware" aria-selected="false" tabindex="-1">About</a></li>
       <% end %>
-      <!--
-      TODO: see https://tools.lib.umich.edu/jira/browse/HELIO-2224
       <li role="presentation"><a id="tab-stats" href="#stats" role="tab" data-toggle="tab" aria-controls="stats" aria-selected="false" tabindex="-1">Stats</a></li>
-      -->
     </ul>
     <div id="tabs-content" class="tab-content monograph-assets-toc-epub-content" aria-live="polite">
       <% if @monograph_presenter.epub? %>
@@ -174,11 +171,10 @@
           </div>
         </section>
       <% end %>
-      <!-- TODO: see https://tools.lib.umich.edu/jira/browse/HELIO-2224
       <section id="stats" class="tab-pane fade in stats row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-stats" tabindex="0">
         <h2 class="sr-only">Stats</h2>
-        <#% render 'stats' %>
-      </section>!-->
+        <%= render 'stats' %>
+      </section>
     </div>
   </div>
 </div><!-- /.monograph-assets-toc-epub -->
