add open access fields

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -378,6 +378,10 @@ footer.press {
       display: block;
     }
 
+    .funder {
+      display: block;
+    }
+
     .message {
       display: inline-block;
       padding-left: 2em;
