--- a/app/views/presses/_form.html.erb
+++ b/app/views/presses/_form.html.erb
@@ -35,5 +35,6 @@
   <%= f.input :footer_block_c %>
   <%= f.input :parent_id, collection: Press.parent_presses, prompt: "Choose a parent press (optional)" %>
   <%= f.input :restricted_message, label: 'Message for restricted works (if any). HTML is ok' %>
+  <%= f.input :share_links, label: 'Allow "share links" for temporary access of restricted materials?"', as: :radio_buttons, collection: [['Yes', true], ['No', false]], default: false %>
   <%= f.submit label: 'Save Publisher' %>
 <% end %>
